--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -1,27 +1,28 @@
 .button {
-  --button-text: var(--text);
-  --padding-y: calc(var(--space) * 0.5);
-  --padding-x: calc(var(--space) * 0.75);
-  --button-scale: 1;
-
-  font-size: calc(var(--button-text) * var(--button-scale));
-  padding: calc(var(--padding-y) * var(--button-scale))
-    calc(var(--padding-x) * var(--button-scale));
+  --space-scale: 1;
+  --padding-y: calc(var(--space) * 0.5 * var(--space-scale));
+  --padding-x: calc(var(--space) * 0.7 * var(--space-scale));
+  padding: calc(var(--padding-y)) calc(var(--padding-x));
   height: auto;
 }
 
 .size-xs {
-  --button-scale: 0.7;
+  font-size: 0.7em;
+  --space-scale: 0.6;
 }
 .size-sm {
-  --button-scale: 0.8;
+  font-size: 0.8em;
+  --space-scale: 0.7;
 }
 .size-md {
-  --button-scale: 0.9;
+  font-size: 0.9em;
+  --space-scale: 0.8;
 }
 .size-lg {
-  --button-scale: 1;
+  font-size: 1em;
+  --space-scale: 0.9;
 }
 .size-xl {
-  --button-scale: 1.1;
+  font-size: 1.1em;
+  --space-scale: 1;
 }
