--- a/src/components/Title/Title.module.scss
+++ b/src/components/Title/Title.module.scss
@@ -1,6 +1,11 @@
-.title {
-  margin-bottom: 0.5em;
-  color: var(--color);
+:root {
+  --hero: 3em;
+  --headline-1: 2em;
+  --headline-2: 1.75em;
+  --headline-3: 1.5em;
+  --headline-4: 1.25em;
+  --headline-5: 1.125em;
+  --headline-6: 1em;
 }
 
 .hero {
