--- a/src/components/Block/Block.module.scss
+++ b/src/components/Block/Block.module.scss
@@ -8,7 +8,10 @@
 }
 
 .blockBase {
-  padding: 0;
+  // padding: 0;
+  &:not(.inset) {
+    padding: 0;
+  }
 }
 
 .block {
@@ -19,14 +22,16 @@
   display: flex;
 }
 
-.compact {
+.xs,
+.sm {
   --space: 1rem;
   --border-radius: 8px;
   --gap: 0.75rem;
 }
 
-.cozy {
-  font-size: 1.2rem;
+.lg,
+.xl {
+  // font-size: 1.2rem;
   --space: 2.5rem;
   --border-radius: 16px;
   --border-width: 2px;
@@ -54,7 +59,5 @@
 }
 
 .inset {
-  padding: var(--space);
-  margin-top: var(--space);
-  margin-bottom: var(--space);
+  // padding: var(--space);
 }
