--- a/src/components/Text/Text.module.scss
+++ b/src/components/Text/Text.module.scss
@@ -18,5 +18,9 @@
 
 .text {
   font-size: calc(var(--text-size) * var(--text-scale, 1));
-  margin-bottom: 1em;
+  margin-bottom: 0.5em;
+}
+
+.text + button {
+  margin-top: 0.35em;
 }
