--- a/src/components/Block/Block.module.scss
+++ b/src/components/Block/Block.module.scss
@@ -7,12 +7,8 @@
   padding: 0;
 }
 
-.block {
-  display: block;
-}
-
 .flex {
-  display: flex;
+  // display: flex;
   > * {
     margin-top: 0 !important;
     margin-bottom: 0 !important;
