--- a/src/components/Card/Card.module.scss
+++ b/src/components/Card/Card.module.scss
@@ -1,7 +1,7 @@
-.card > :first-child {
-  margin-top: 0;
-}
+// .card > :first-child {
+//   margin-top: 0;
+// }
 
-.card > :last-child {
-  margin-bottom: 0;
-}
+// .card > :last-child {
+//   margin-bottom: 0;
+// }
