--- a/src/components/Section/Section.module.scss
+++ b/src/components/Section/Section.module.scss
@@ -1,9 +1,9 @@
 .section > :first-child {
-  margin-top: 0 !important;
+  // margin-top: 0 !important;
 }
 
-.section > :last-child {
-  margin-bottom: 0 !important;
+.section > :not(div):last-child {
+  margin-bottom: 0;
 }
 
 .section h1:first-of-type,
@@ -12,7 +12,7 @@
 .section h4:first-of-type,
 .section h5:first-of-type,
 .section h6:first-of-type {
-  margin-top: 0 !important;
+  // margin-top: 0;
 }
 
 .section > image,
