--- a/src/pages/DemosPage.module.scss
+++ b/src/pages/DemosPage.module.scss
@@ -1,14 +1,10 @@
-.app {
-  position: relative;
-}
-
-.app::before {
+.container::before {
   content: "";
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background: url("background.jpg") no-repeat center center;
   background-size: cover;
   background-attachment: fixed;
